--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="drawer drawer--right">
+<body class="drawer drawer--right index">
     <header class="header">
         <div class="header__wrap">
     
