--- a/search.html
+++ b/search.html
@@ -27,11 +27,11 @@
                     </div>
                     <div class="menu">
                         <ul>
-                            <li><a class="search" href="/search.html">さがす</a></li>
-                            <li><a class="imadoko" href="/imadoko.html">いまどこ</a></li>
-                            <li><a class="apply" href="/apply.html">申込み</a></li>
-                            <li><a class="message" href="/message.html">メッセージ</a></li>
-                            <li><a class="mypage" href="/mypage.html">マイページ</a></li>
+                            <li><a class="search" href="search.html">さがす</a></li>
+                            <li><a class="imadoko" href="imadoko.html">いまどこ</a></li>
+                            <li><a class="apply" href="apply.html">申込み</a></li>
+                            <li><a class="message" href="message.html">メッセージ</a></li>
+                            <li><a class="mypage" href="mypage.html">マイページ</a></li>
                         </ul>
                     </div>
                 </div>
