--- a/search.html
+++ b/search.html
@@ -49,11 +49,11 @@
                 <aside class="drawer-nav drawer-close" role="navigation">
                     <div class="nav-inner drawer-menu">
                         <ul>
-                            <li><a class="search" href="/search.html">さがす</a></li>
-                            <li><a class="imadoko" href="/imadoko.html">いまどこ</a></li>
-                            <li><a class="apply" href="/apply.html">申込み</a></li>
-                            <li><a class="message" href="/message.html">メッセージ</a></li>
-                            <li><a class="mypage" href="/mypage.html">マイページ</a></li>
+                            <li><a class="search" href="search.html">さがす</a></li>
+                            <li><a class="imadoko" href="imadoko.html">いまどこ</a></li>
+                            <li><a class="apply" href="apply.html">申込み</a></li>
+                            <li><a class="message" href="message.html">メッセージ</a></li>
+                            <li><a class="mypage" href="mypage.html">マイページ</a></li>
                         </ul>
                     </div>
                 </aside>
@@ -66,7 +66,7 @@
 
         <section class="advice">
             <ul>
-                <li class="task"><a href="/mypage.html">プロフィールを充実させよう！</a></li>
+                <li class="task"><a href="mypage.html">プロフィールを充実させよう！</a></li>
                 <li class="question">
                     <a href="/">
                         <p>ぼかしをとるには？</p>
@@ -90,7 +90,7 @@
 
         <section class="newface swiper">
             <div class="head">
-                <div class="title">新規会員様</div><a href="/newface.html">もっと見る</a>
+                <div class="title">新規会員様</div><a href="newface.html">もっと見る</a>
             </div>
             <div class="newface__wrap swiper-wrapper loop">
                 <div class="box swiper-slide">
