--- a/mypage.html
+++ b/mypage.html
@@ -72,7 +72,7 @@
 
             <div class="text">
                 <div class="name">たけひこ</div>
-                <button>プロフィールを編集する</button>
+                <button><a href="/">プロフィールを編集する</a></button>
             </div>
         </section>
 
@@ -81,7 +81,7 @@
                 <div class="box lciq">
                     <div class="title">LCIQスコア</div>
                     <div class="numb">86</div>
-                    <button class="yellow"><a href="">再診断</a></button>
+                    <button class="yellow"><a href="/">再診断</a></button>
                     <a class="point" href="/">スコアをあげるには？</a>
                 </div>
                 <div class="box like">
@@ -99,14 +99,14 @@
 
         <section class="menu">
             <ul>
-                <li><a href=""><i class="fa-solid fa-shoe-prints"></i>あしあと</a></li>
-                <li><a href=""><i class="fa-solid fa-heart"></i>いいね</a></li>
-                <li><a href=""><i class="fa-solid fa-comments"></i>メッセージ</a></li>
-                <li><a href=""><i class="fa-solid fa-location-dot"></i>いまドコ検索</a></li>
-                <li><a href=""><i class="fa-solid fa-circle-info"></i>キャンペーン</a></li>
-                <li><a href=""><i class="fa-solid fa-yen-sign"></i>プラン変更</a></li>
-                <li><a href=""><i class="fa-solid fa-pen-nib"></i>会員情報</a></li>
-                <li><a href=""><i class="fa-regular fa-envelope"></i>お問い合わせ</a></li>
+                <li><a href="/"><i class="fa-solid fa-shoe-prints"></i>あしあと</a></li>
+                <li><a href="/"><i class="fa-solid fa-heart"></i>いいね</a></li>
+                <li><a href="/"><i class="fa-solid fa-comments"></i>メッセージ</a></li>
+                <li><a href="/"><i class="fa-solid fa-location-dot"></i>いまドコ検索</a></li>
+                <li><a href="/"><i class="fa-solid fa-circle-info"></i>キャンペーン</a></li>
+                <li><a href="/"><i class="fa-solid fa-yen-sign"></i>プラン変更</a></li>
+                <li><a href="/"><i class="fa-solid fa-pen-nib"></i>会員情報</a></li>
+                <li><a href="/"><i class="fa-regular fa-envelope"></i>お問い合わせ</a></li>
             </ul>
         </section>
 
