--- a/mypage.html
+++ b/mypage.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EXMATCH</title>
-    <script src="assets/js/include.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const base = document.createElement("base");
+
+            // ローカルと本番でベースURLを切り替え
+            base.href = window.location.origin.includes("github.io")
+                ? "https://shin-sk.github.io/exmatch/"
+                : "/";
+            document.head.appendChild(base);
+        });
+    </script>
 </head>
 <body class="drawer drawer--right base mypage">
     
