--- a/mypage.html
+++ b/mypage.html
@@ -11,14 +11,17 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const base = document.createElement("base");
+            const baseURL = window.location.origin.includes("github.io")
+                ? "https://shin-sk.github.io/exmatch/" // 本番環境
+                : "/"; // ローカル環境
 
-            // ローカルと本番でベースURLを切り替え
-            base.href = window.location.origin.includes("github.io")
-                ? "https://shin-sk.github.io/exmatch/"
-                : "/";
-            document.head.appendChild(base);
+            // href="/" のリンクを修正
+            document.querySelectorAll('a[href="/"]').forEach(link => {
+                link.setAttribute("href", baseURL);
+                console.log("Updated link to:", link.href); // 修正後のリンクを確認
+            });
         });
+
     </script>
 </head>
 <body class="drawer drawer--right base mypage">
