--- a/search.html
+++ b/search.html
@@ -23,7 +23,7 @@
         });
     </script>
 </head>
-<body class="drawer drawer--right base search free-user">
+<body class="drawer drawer--right base search guest-user">
     
     <header class="header">
 
