フォルダ名を開発環境に合わせました

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="statics/css/style.css">
 </head>
 
 <body class="drawer drawer--right index">
@@ -21,7 +21,7 @@
                 <div class="nav__wrap d-md-flex d-none">
                     <div class="logo">
                         <a href="/">
-                            <img src="assets/images/logo.svg">
+                            <img src="statics/img/logo.svg">
                         </a>
                     </div>
                     <div class="menu">
@@ -42,7 +42,7 @@
                 <div class="nav__sp d-md-none d-flex">
                     <div class="logo">
                         <a href="/">
-                            <img src="assets/images/logo.svg" alt="">
+                            <img src="statics/img/logo.svg" alt="">
                         </a>
                     </div>
                     <button type="button" class="drawer-toggle drawer-hamburger">
@@ -79,7 +79,7 @@
             <div class="kv__wrap">
                 <div class="box">
                     <div class="t1">いまここで出会う。</div>
-                    <div class="logo"><img src="assets/images/logo.svg" alt=""></div>
+                    <div class="logo"><img src="statics/img/logo.svg" alt=""></div>
                     <button><a href="">さっそくはじめる</a></button>
                     <div class="maru">
                         <a class="oik" href="#oaite" data-color="blue">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="image">
-                    <img src="assets/images/kv.webp" alt="">
+                    <img src="statics/img/kv.webp" alt="">
                 </div> 
             </div>
         </section>
@@ -108,12 +108,12 @@
             </p>
             <div class="banner swiper">
                 <div class="banner__wrap swiper-wrapper">
-                    <a class="swiper-slide" href=""><img src="assets/images/banner1.webp" alt=""></a>
-                    <a class="swiper-slide" href=""><img src="assets/images/banner2.webp" alt=""></a>
-                    <a class="swiper-slide" href=""><img src="assets/images/banner3.webp" alt=""></a>
-                    <a class="swiper-slide" href=""><img src="assets/images/banner1.webp" alt=""></a>
-                    <a class="swiper-slide" href=""><img src="assets/images/banner2.webp" alt=""></a>
-                    <a class="swiper-slide" href=""><img src="assets/images/banner3.webp" alt=""></a>
+                    <a class="swiper-slide" href=""><img src="statics/img/banner1.webp" alt=""></a>
+                    <a class="swiper-slide" href=""><img src="statics/img/banner2.webp" alt=""></a>
+                    <a class="swiper-slide" href=""><img src="statics/img/banner3.webp" alt=""></a>
+                    <a class="swiper-slide" href=""><img src="statics/img/banner1.webp" alt=""></a>
+                    <a class="swiper-slide" href=""><img src="statics/img/banner2.webp" alt=""></a>
+                    <a class="swiper-slide" href=""><img src="statics/img/banner3.webp" alt=""></a>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
@@ -127,26 +127,26 @@
                         <div class="area">
                             <div class="box">
                                 <div class="point">
-                                    <img src="assets/images/p1.webp" alt="">
+                                    <img src="statics/img/p1.webp" alt="">
                                     <div class="text">恋愛偏差値®で<br>相性がわかる</div>
                                 </div>
-                                <img src="assets/images/ft1.webp" alt="">
+                                <img src="statics/img/ft1.webp" alt="">
                                 <p>LCIQ®による恋愛偏差値®を掲載。お相手との相性が一発でわかります。自分の偏差値も知れるいい機会なのかも。</p>
                             </div>
                             <div class="box">
                                 <div class="point">
-                                    <img src="assets/images/p2.webp" alt="">
+                                    <img src="statics/img/p2.webp" alt="">
                                     <div class="text">GPS機能</div>
                                 </div>
-                                <img src="assets/images/ft2.webp" alt="">
+                                <img src="statics/img/ft2.webp" alt="">
                                 <p>今どこにいるかがわかるGPS機能を搭載。もちろんセキュリティ対策はバッチリ。今出会いたい、その瞬間を逃しません。</p>
                             </div>
                             <div class="box">
                                 <div class="point">
-                                    <img src="assets/images/p3.webp" alt="">
+                                    <img src="statics/img/p3.webp" alt="">
                                     <div class="text">オトナの<br>プロフィール</div>
                                 </div>
-                                <img src="assets/images/ft3.webp" alt="">
+                                <img src="statics/img/ft3.webp" alt="">
                                 <p>オプションで性感覚や性指向を記入する欄があります。もちろん入力は自由。より踏み込んだコミュニケーションでの失敗を防げます。</p>
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                     <div class="oaite__wrap swiper-wrapper">
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp1.webp" alt="">
+                                <img src="statics/img/smp1.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -177,7 +177,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp2.webp" alt="">
+                                <img src="statics/img/smp2.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -187,7 +187,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp3.webp" alt="">
+                                <img src="statics/img/smp3.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -197,7 +197,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp4.webp" alt="">
+                                <img src="statics/img/smp4.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -207,7 +207,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp5.webp" alt="">
+                                <img src="statics/img/smp5.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -217,7 +217,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp6.webp" alt="">
+                                <img src="statics/img/smp6.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -227,7 +227,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp7.webp" alt="">
+                                <img src="statics/img/smp7.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -237,7 +237,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp8.webp" alt="">
+                                <img src="statics/img/smp8.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -247,7 +247,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp9.webp" alt="">
+                                <img src="statics/img/smp9.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -257,7 +257,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp10.webp" alt="">
+                                <img src="statics/img/smp10.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -272,7 +272,7 @@
                     <div class="oaite__wrap swiper-wrapper">
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp1-m.webp" alt="">
+                                <img src="statics/img/smp1-m.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -282,7 +282,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp2-m.webp" alt="">
+                                <img src="statics/img/smp2-m.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -292,7 +292,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp3-m.webp" alt="">
+                                <img src="statics/img/smp3-m.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -302,7 +302,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp4-m.webp" alt="">
+                                <img src="statics/img/smp4-m.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -312,7 +312,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp5-m.webp" alt="">
+                                <img src="statics/img/smp5-m.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -322,7 +322,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp6-m.webp" alt="">
+                                <img src="statics/img/smp6-m.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -332,7 +332,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp7-m.webp" alt="">
+                                <img src="statics/img/smp7-m.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -342,7 +342,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp8-m.webp" alt="">
+                                <img src="statics/img/smp8-m.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -352,7 +352,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp9-m.webp" alt="">
+                                <img src="statics/img/smp9-m.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -362,7 +362,7 @@
                         </div>
                         <div class="box swiper-slide">
                             <div class="image">
-                                <img src="assets/images/smp10-m.webp" alt="">
+                                <img src="statics/img/smp10-m.webp" alt="">
                                 <div class="info">
                                     <div class="name">サンプル子</div>
                                     <div class="age">00</div>
@@ -408,7 +408,7 @@
                 <div class="mainTitle">エクスマッチの特徴</div>
                 <div class="merit__wrap">
                     <div class="box">
-                        <div class="image"><img src="assets/images/merit1.webp" alt=""></div>
+                        <div class="image"><img src="statics/img/merit1.webp" alt=""></div>
                         <div class="text">
                             <div class="title">LCIQ診断で相性を徹底検証</div>
                             <p>
@@ -417,7 +417,7 @@
                         </div>
                     </div><!-- box -->
                     <div class="box">
-                        <div class="image"><img src="assets/images/merit2.webp" alt=""></div>
+                        <div class="image"><img src="statics/img/merit2.webp" alt=""></div>
                         <div class="text">
                             <div class="title">相性がいい人からいいねがくる</div>
                             <p>
@@ -426,7 +426,7 @@
                         </div>
                     </div><!-- box -->
                     <div class="box">
-                        <div class="image"><img src="assets/images/merit3.webp" alt=""></div>
+                        <div class="image"><img src="statics/img/merit3.webp" alt=""></div>
                         <div class="text">
                             <div class="title">自分を変えられる</div>
                             <p>
@@ -514,19 +514,19 @@
                 </div>
                 <div class="security__wrap">
                     <div class="box">
-                        <img src="assets/images/sc1.webp" alt="">
+                        <img src="statics/img/sc1.webp" alt="">
                         <span>プライバシー<br>守ります</span>
                     </div>
                     <div class="box">
-                        <img src="assets/images/sc2.webp" alt="">
+                        <img src="statics/img/sc2.webp" alt="">
                         <span>悪質ユーザー<br>取り締まり</span>
                     </div>
                     <div class="box">
-                        <img src="assets/images/sc3.webp" alt="">
+                        <img src="statics/img/sc3.webp" alt="">
                         <span>万全の<br>サポート体制</span>
                     </div>
                     <div class="box">
-                        <img src="assets/images/sc4.webp" alt="">
+                        <img src="statics/img/sc4.webp" alt="">
                         <span>高額請求<br>なし</span>
                     </div>
                 </div>
@@ -621,16 +621,16 @@
     </main>
     <footer class="footer">
         <div class="mockup">
-            <img src="assets/images/mockup.webp" alt="">
+            <img src="statics/img/mockup.webp" alt="">
         </div>
         <div class="contents">
             <div class="container">
                 <div class="sns">
-                    <a class="youtube" href="" target="_blank"><img src="assets/images/sns-youtube.webp" alt=""></a>
-                    <a class="tiktok" href="" target="_blank"><img src="assets/images/sns-tiktok.webp" alt=""></a>
+                    <a class="youtube" href="" target="_blank"><img src="statics/img/sns-youtube.webp" alt=""></a>
+                    <a class="tiktok" href="" target="_blank"><img src="statics/img/sns-tiktok.webp" alt=""></a>
                 </div>
                 <div class="footer__wrap">
-                    <div class="logo"><a href="/"><img src="assets/images/logo.svg" alt=""></a></div>
+                    <div class="logo"><a href="/"><img src="statics/img/logo.svg" alt=""></a></div>
                     <ul>
                         <li><a href="/">会社概要</a></li>
                         <li><a href="/">利用規約</a></li>
@@ -657,6 +657,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
     <script src="https://kit.fontawesome.com/66f29bbc2b.js" crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="statics/js/script.js"></script>
 </body>
 </html>
