--- a/mypage.html
+++ b/mypage.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="statics/css/style.css">
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const baseURL = window.location.origin.includes("github.io")
@@ -35,7 +35,7 @@
                 <div class="nav__wrap d-md-flex d-none">
                     <div class="logo">
                         <a href="/">
-                            <img src="assets/images/logo.svg">
+                            <img src="statics/img/logo.svg">
                         </a>
                     </div>
                     <div class="menu">
@@ -52,7 +52,7 @@
                 <div class="nav__sp d-md-none d-flex">
                     <div class="logo">
                         <a href="/">
-                            <img src="assets/images/logo.svg" alt="">
+                            <img src="statics/img/logo.svg" alt="">
                         </a>
                     </div>
                     <button type="button" class="drawer-toggle drawer-hamburger">
@@ -81,7 +81,7 @@
         <div class="mainTitle">マイページ</div>
         
         <section class="profile">
-            <div class="image"><img src="assets/images/user-unset.svg" alt=""></div>
+            <div class="image"><img src="statics/img/user-unset.svg" alt=""></div>
 
             <div class="text">
                 <div class="name">たけひこ</div>
@@ -129,7 +129,7 @@
         <div class="contents">
             <div class="container">
                 <div class="footer__wrap">
-                    <div class="logo"><a href="/"><img src="assets/images/logo.svg" alt=""></a></div>
+                    <div class="logo"><a href="/"><img src="statics/img/logo.svg" alt=""></a></div>
                     <ul>
                         <li><a href="/">会社概要</a></li>
                         <li><a href="/">利用規約</a></li>
@@ -157,7 +157,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
 <script src="https://kit.fontawesome.com/66f29bbc2b.js" crossorigin="anonymous"></script>
 
-<script src="assets/js/loop.js"></script>
-<script src="assets/js/script.js"></script>
+<script src="statics/js/loop.js"></script>
+<script src="statics/js/script.js"></script>
 </body>
 </html>
