--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="statics/css/style.css">
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const baseURL = window.location.origin.includes("github.io")
@@ -34,7 +34,7 @@
                 <div class="nav__wrap d-md-flex d-none">
                     <div class="logo">
                         <a href="/">
-                            <img src="assets/images/logo.svg">
+                            <img src="statics/img/logo.svg">
                         </a>
                     </div>
                     <div class="menu">
@@ -51,7 +51,7 @@
                 <div class="nav__sp d-md-none d-flex">
                     <div class="logo">
                         <a href="/">
-                            <img src="assets/images/logo.svg" alt="">
+                            <img src="statics/img/logo.svg" alt="">
                         </a>
                     </div>
                     <button type="button" class="drawer-toggle drawer-hamburger">
@@ -95,7 +95,7 @@
             </ul>
             <div class="lciq">
                 <div class="logo">
-                    <img src="assets/images/lciq-logo.svg" alt="">
+                    <img src="statics/img/lciq-logo.svg" alt="">
                 </div>
                 <p><a href="https://exm.lciq.jp/" target="_blank">まずは今の自分をしることから！（所要時間5〜10分）</a></p>
             </div>
@@ -108,19 +108,19 @@
             <div class="newface__wrap swiper-wrapper loop">
                 <div class="box swiper-slide">
                     <div class="profile">
-                        <img src="assets/images/nf1.webp" alt="">
+                        <img src="statics/img/nf1.webp" alt="">
                     </div>
                     <p>22歳 神奈川</p>
                 </div>
                 <div class="box swiper-slide">
                     <div class="profile">
-                        <img src="assets/images/nf2.webp" alt="">
+                        <img src="statics/img/nf2.webp" alt="">
                     </div>
                     <p>24歳 茨城</p>
                 </div>
                 <div class="box swiper-slide">
                     <div class="profile">
-                        <img src="assets/images/nf3.webp" alt="">
+                        <img src="statics/img/nf3.webp" alt="">
                     </div>
                     <p>29歳 東京</p>
                 </div>
@@ -134,7 +134,7 @@
                 <div class="box">
                     <div class="box__wrap">
                         <div class="profile image">
-                            <img src="assets/images/smp1.webp" alt="">
+                            <img src="statics/img/smp1.webp" alt="">
                         </div>
                         <div class="area">
                             <div class="area__wrap">
@@ -155,7 +155,7 @@
                                 </div>
                                 <div class="right">
                                     <div class="lciq-point">85</div>
-                                    <div class="image"><img src="assets/images/lciq-sample.webp" alt=""></div>
+                                    <div class="image"><img src="statics/img/lciq-sample.webp" alt=""></div>
                                 </div>
                             </div>
                             <p>
@@ -178,7 +178,7 @@
         <div class="contents">
             <div class="container">
                 <div class="footer__wrap">
-                    <div class="logo"><a href="/"><img src="assets/images/logo.svg" alt=""></a></div>
+                    <div class="logo"><a href="/"><img src="statics/img/logo.svg" alt=""></a></div>
                     <ul>
                         <li><a href="/">会社概要</a></li>
                         <li><a href="/">利用規約</a></li>
@@ -206,7 +206,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
 <script src="https://kit.fontawesome.com/66f29bbc2b.js" crossorigin="anonymous"></script>
 
-<script src="assets/js/loop.js"></script>
-<script src="assets/js/script.js"></script>
+<script src="statics/js/loop.js"></script>
+<script src="statics/js/script.js"></script>
 </body>
 </html>
